scripts/frontend-deployment-dev-azure.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: devcommongroupacr.azurecr.io/flow-frontend:latest-dev-azure
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
      imagePullSecrets:
      - name: regsecret
