scripts/frontend-deployment-uat.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: REGISTRY/kauri-frontend:TAG
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
