scripts/frontend-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: frontend
