scripts/frontend-ingress-dev.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "frontend"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size:  "10m"
  name: frontend-ingress
  namespace: dev
spec:
  tls:
  - hosts:
    - dev.kauri.io
    secretName: dev-frontend-tls
  rules:
    - host: dev.kauri.io
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
            path: /
