scripts/frontend-ingress-dev2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "frontend"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size:  "10m"
  name: frontend-ingress
  namespace: dev2
spec:
  tls:
  - hosts:
    - dev2.kauri.io
    secretName: dev2-frontend-tls
  rules:
    - host: dev2.kauri.io
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
            path: /
          - backend:
              serviceName: monolith
              servicePort: 8081
            path: /sitemap
          - backend:
              serviceName: monolith
              servicePort: 8081
            path: /feed
