scripts/frontend-ingress-uat-maintenance.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size:  "10m"
  name: frontend-ingress-new
  namespace: uat
spec:
  tls:
  - hosts:
    - kauri.io
    secretName: uat-frontend-tls-new
  rules:
    - host: kauri.io
      http:
        paths:
          - backend:
              serviceName: maintenance
              servicePort: 5000
            path: /
