scripts/frontend-ingress-uat-new.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "frontend"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    ingress.kubernetes.io/proxy-body-size: 10m
  name: frontend-ingress-new
  namespace: uat
spec:
  tls:
  - hosts:
    - kauri.io
    secretName: uat-frontend-tls-new
  rules:
    - host: kauri.io
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
            path: /
          - backend:
              serviceName: monolith
              servicePort: 8081
            path: /sitemap
          - backend:
              serviceName: monolith
              servicePort: 8081
            path: /feed
