scripts/frontend-ingress-uat-www.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "frontend"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      return 301 https://kauri.io$request_uri;
  name: frontend-ingress-www
  namespace: uat
spec:
  tls:
  - hosts:
    - www.kauri.io
    secretName: www-uat-frontend-new
  rules:
    - host: www.kauri.io
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
            path: /
